@@ -19,9 +19,11 @@ package org.openqa.selenium.remote.http;
 
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
 
+import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
 
@@ -77,7 +79,7 @@ public class PrefixedRouteTest {
     route.execute(new HttpRequest(GET, "/cheese/and/peas"));
 
     assertThat(path.get()).isEqualTo("/and/peas");
-    assertThat(parts.get()).isEqualTo(List.of("/cheese"));
+    assertThat(parts.get()).isEqualTo(singletonList("/cheese"));
   }
 
   @Test
@@ -97,6 +99,6 @@ public class PrefixedRouteTest {
     route.execute(new HttpRequest(GET, "/cheese/and/peas"));
 
     assertThat(path.get()).isEqualTo("/peas");
-    assertThat(parts.get()).isEqualTo(List.of("/cheese", "/and"));
+    assertThat(parts.get()).isEqualTo(Arrays.asList("/cheese", "/and"));
   }
 }
